# stock_bigdata

./: .gitignore  AGENTS.md  Dockerfile.airflow  Dockerfile.minio-init  INFERENCE_FIX_SUMMARY.md  README.md  agent_layer_specification_crewai_deepseek_v1_2.md  backtest_orca.py  bd-ml-filtering.ipynb  call_api.py  call_api_news.py  call_api_test.py  docker-compose.yml  finnhub_news.json  finnhub_sentiment.json  full_agent_layer_2_week_roadmap.md  inference_direct.py  ingestion.py  minio-init.sh  mock_ingestion.py  news.json  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.sh  spark-defaults.cfg  stock_data.parquet  stock_data_1d.parquet  stock_data_1m.parquet  stock_data_8d.parquet  test.py  test.sh  test_complete_flow.py  test_debug_inference.py  test_ml_inference.py  test_model_inference.py  test_real_predictions.py
orca-agent-advisory/: .dockerignore  .env  Dockerfile  agent_layer_specification_crewai_deepseek_v1_2.md  full_agent_layer_2_week_roadmap.md  pyproject.toml
orca-agent-advisory/app/: __init__.py  config.py  main.py  worker.py
orca-agent-advisory/docs/: technical_spec.md
orca-agent-advisory/samples/: high_risk_request.json  high_risk_tool_results.json  missing_sentiment_tool_results.json  missing_valuation_tool_results.json  normal_final_decision.json  normal_request.json  normal_tool_results.json  portfolio_allocation_final_decision.json  portfolio_allocation_request.json  portfolio_allocation_tool_results.json  stale_data_tool_results.json  unavailable_market_tool_results.json  upstream_ml_aapl.json
orca-agent-advisory/tests/: conftest.py  test_agent_query_endpoint.py  test_agent_query_jobs.py  test_api_decision_endpoint.py  test_audit_service.py  test_bigdata_ml_provider.py  test_config.py  (+13 more)
(+175 files in other folders)
