[project]
name = "orca-agent-advisory"
version = "0.1.0"
description = "Multi-agent investment advisory layer schema contract."
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=1.14.4,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "litellm>=1.86,<2",
    "pydantic>=2.8,<3",
    "psycopg[binary]>=3.2,<4",
    "pyspark==3.5.0",
    "pyyaml>=6.0,<7",
    "redis>=5.0,<6",
    "rq>=2.0,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that call the configured live LLM provider",
]
